[package]
name = "ldc"
version = "0.1.0"
authors = ["learndapp <hi@w3c.group>"]
edition = "2018"

[dependencies]
clap = "2"
blake2 = "0.8.0"
memmap = "0.7.0"
paired = "0.15"
rand = "0.4"
tempfile = "3.0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.3.2"

[dependencies.filecoin-proofs]
version = "0.3"

[dependencies.storage-proofs]
version = "0.3"
